Fixed visibility of button and phone number in header

--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,7 @@ header .logo {
 }
 
 .header__burger-btn {
+  z-index: 11;
   display: none;
   position: relative;
   width: 4.6rem;
@@ -87,6 +88,10 @@ header .logo {
   text-decoration: underline;
   color: #fff;
   transform: scale(1.1);
+}
+
+address .nav__link {
+  z-index: 11;
 }
 
 .flex-container {
